syntax = "proto3";

option csharp_namespace = "saga_server";
option go_package = ".;api";

package saga;

service SagaServer {
  rpc CreateGlobalTransaction (CreateGlobalTransactionRequest) returns (CreateGlobalTransactionReply);
  rpc CreateBranchTransaction (CreateBranchTransactionRequest) returns (CreateBranchTransactionReply);
  rpc QueryGlobalTransactionDetail (QueryGlobalTransactionDetailRequest) returns (QueryGlobalTransactionDetailReply);
  rpc QueryBranchTransactionDetail (QueryBranchTransactionDetailRequest) returns (QueryBranchTransactionDetailReply);
  rpc SubmitGlobalTransactionState (SubmitGlobalTransactionStateRequest) returns (SubmitGlobalTransactionStateReply);
  rpc SubmitBranchTransactionState (SubmitBranchTransactionStateRequest) returns (SubmitBranchTransactionStateReply);
}

message NodeInfo {
  string group = 1;
  string service = 2;
  string instanceId = 3;
}

enum TxState {
  PROCESSING = 0; // 正常处理事务中
  COMMITTED = 1; // 整个sagaId/branchId处理成功
  COMPENSATION_DOING = 2; // 补偿任务执行中
  COMPENSATION_ERROR = 3; // 补偿任务某次执行失败
  COMPENSATION_DONE = 4; // 补偿任务执行完成
  COMPENSATION_FAIL = 5; // 补偿任务多次执行过程整体失败
}

message CreateGlobalTransactionRequest {
  NodeInfo node = 1;
  int64 expireSeconds = 2; // tx expire after {expireSeconds} seconds
  string extra = 3; // extra info
}

message CreateGlobalTransactionReply {
  int32 code = 1; // code == 0 means success
  string error = 2;
  string xid = 3;
}

message CreateBranchTransactionRequest {
  NodeInfo node = 1;
  string branchServiceKey = 2;
  string branchCompensationServiceKey = 3;
  string xid = 4;
}

message CreateBranchTransactionReply {
  int32 code = 1; // code == 0 means success
  string error = 2;
  string branchId = 3;
}

message QueryGlobalTransactionDetailRequest {
  string xid = 1;
}

message TransactionBranchDetail {
  string branchId = 1;
  NodeInfo node = 2;
  TxState state = 3;
  int32 compensationFailTimes = 4; // 本branch的补偿任务失败重试次数
  string branchServiceKey = 5;
  string branchCompensationServiceKey = 6;
  int32 version = 7;
}

message QueryGlobalTransactionDetailReply {
  int32 code = 1; // code == 0 means success
  string error = 2;
  string xid = 3;
  repeated TransactionBranchDetail branches = 4;
  NodeInfo starterNode = 5;
  TxState state = 6;
  bool endBranches = 7;
  int32 version = 8;
}

message QueryBranchTransactionDetailRequest {
  string branchId = 1;
}

message QueryBranchTransactionDetailReply {
  int32 code = 1; // code == 0 means success
  string error = 2;
  string xid = 3;
  TransactionBranchDetail detail = 4;
  TxState globalTxState = 5;
}

message SubmitGlobalTransactionStateRequest {
  string xid = 1;
  TxState oldState = 2;
  TxState state = 3;
  int32 oldVersion = 4; // 修改前的全局事务的版本号
}

message SubmitGlobalTransactionStateReply {
  int32 code = 1; // code == 0 means success
  string error = 2;
  TxState state = 3; // 修改后的saga state
}

message SubmitBranchTransactionStateRequest {
  string xid = 1;
  string branchId = 2;
  TxState oldState = 3;
  TxState state = 4;
  int32 oldVersion = 5; // 修改前的分支事务的版本号
  string jobId = 6; // 每次分支执行每次任务或者补偿任务都有一个不同的jobId
  string errorReason = 7; // 失败原因
}

message SubmitBranchTransactionStateReply {
  int32 code = 1; // code == 0 means success
  string error = 2;
  TxState state = 3; // 修改后的branch state
}